# agent-power-pack

./: .cursorrules  .env.example  .gitignore  .woodpecker.yml  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  MEMORY.md  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml
.specify/: grill-triggers.yaml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
adapters/: __init__.py  report.py
adapters/claude/: __init__.py  pyproject.toml
adapters/codex/: __init__.py  pyproject.toml
adapters/cursor/: __init__.py  pyproject.toml
adapters/gemini/: __init__.py  pyproject.toml
docs/: wiki-structure.yaml
docs/codex_input/: codex_issue_md.md
manifests/agents-md/: help.yaml  lint.yaml
manifests/cicd/: check.yaml  container.yaml  harden.yaml  health.yaml  infra-discover.yaml  infra-init.yaml  infra-pipeline.yaml  init.yaml  pipeline.yaml  smoke.yaml  woodpecker-checklist.yaml
manifests/docs/: analyze.yaml  auto.yaml  c4.yaml  start.yaml  update.yaml
manifests/flow/: auto.yaml  check.yaml  cleanup.yaml  deploy.yaml  doctor.yaml  finish.yaml  merge.yaml  start.yaml  status.yaml  sync.yaml
manifests/grill/: me.yaml  yourself.yaml
manifests/issue/: close.yaml  create.yaml  help.yaml  list.yaml  update.yaml
manifests/project/: init.yaml  lite.yaml  next.yaml
manifests/qa/: help.yaml  test.yaml
manifests/second-opinion/: grill-plan.yaml  help.yaml  models.yaml  start.yaml
manifests/secrets/: delete.yaml  get.yaml  list.yaml  rotate.yaml  run.yaml  set.yaml  ui.yaml  validate.yaml
manifests/security/: deep.yaml  explain.yaml  quick.yaml  scan.yaml
manifests/spec/: create.yaml  init.yaml  status.yaml  sync.yaml
manifests/wiki/: create-page.yaml  search.yaml  update-page.yaml
mcp_container/: Dockerfile  __main__.py  pyproject.toml  supervisor.py
mcp_container/servers/nano_banana/: __init__.py  server.py
mcp_container/servers/plane/: __init__.py  server.py
mcp_container/servers/playwright_persistent/: __init__.py  server.py
mcp_container/servers/second_opinion/: __init__.py  server.py
mcp_container/servers/wikijs/: __init__.py  server.py
mcp_container/servers/wikijs/operations/: create_page.graphql  delete_page.graphql  list_pages.graphql  search.graphql  update_page.graphql
mcp_container/servers/woodpecker/: __init__.py  server.py
mcp_container/transports/: dual.py
scripts/: update_vendored_skills.py
specs/001-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-foundation/contracts/: agents-md-lint.result.schema.json  mcp-tools.md  runtime-adapter.interface.md  runtime-invocation-matrix.md  skill-manifest.schema.json
specs/001-foundation/grills/: 2026-04-13-issue-118.md  2026-04-13-issue-142.md
specs/002-docs-pipeline/: spec.md
src/agent_power_pack/: __init__.py  cli.py  issue_backend.py  logging.py
src/agent_power_pack/cicd/: __init__.py  bootstrap_detector.py  bootstrap_models.py  woodpecker_checklist.py  woodpecker_checklist_models.py
src/agent_power_pack/cpp_init/: __init__.py  agents_md_update.py  probes.py  wizard.py
src/agent_power_pack/docs/: __init__.py  executor.py  plan_generator.py  signal_detector.py  staleness.py  theme_analyzer.py
src/agent_power_pack/generator/: __init__.py  instruction_files.py  revert.py
src/agent_power_pack/grill/: __init__.py  config.py  transcript.py  triggers.py  yourself.py
src/agent_power_pack/linter/: __init__.py  agents_md.py  document.py  generated_check.py  repo_check.py  result.py  schema_check.py
src/agent_power_pack/manifest/: __init__.py  loader.py  schema.py  validator.py
src/agent_power_pack/secrets/: __init__.py  aws_sidecar_tier.py  dotenv_tier.py  env_file_tier.py  protocol.py
tests/e2e/: test_dual_attach.py  test_mcp_container_sse.py  test_mcp_container_stdio.py
tests/integration/: test_adapter_claude.py  test_adapter_codex.py  test_cpp_init_wizard.py
tests/integration/fixtures/manifests/: minimal.yaml  with-attribution.yaml  with-mcp.yaml
tests/integration/golden/claude/.claude/skills/attributed-skill/: SKILL.md
tests/integration/golden/claude/.claude/skills/flow-mcp-skill/: SKILL.md
tests/integration/golden/claude/.claude/skills/flow-minimal-skill/: SKILL.md
tests/integration/golden/claude/.claude/skills/grill-attributed-skill/: SKILL.md
tests/perf/: test_cpp_init.py  test_grill_yourself.py  test_install_time.py  test_lint_time.py  test_mcp_cold_start.py
tests/smoke/: conftest.py  test_codex_smoke.py
tests/unit/: test_adapter_stubs.py  test_agents_md_lint.py  test_bootstrap_detector.py  test_cli_install_aliases.py  test_executor.py  test_grill_triggers.py  test_issue_backend.py  test_manifest_loader.py  test_manifest_validator.py  test_plan_generator.py  test_probe_aws_sidecar.py  test_probe_openai_docs.py  test_secrets_tiers.py  test_signal_detector.py  test_staleness.py  test_theme_analyzer.py  test_vendoring.py  test_woodpecker_checklist.py
tests/unit/fixtures/woodpecker/: artifact_validation_gate_bad.yml  artifact_validation_gate_good.yml  canary_before_fleet_bad.yml  canary_before_fleet_good.yml  concurrent_deploy_lock_bad.yml  concurrent_deploy_lock_good.yml  explicit_runtime_contracts_bad.yml  explicit_runtime_contracts_good.yml  explicit_when_depends_on_bad.yml  explicit_when_depends_on_good.yml  no_unjustified_failure_ignore_bad.yml  no_unjustified_failure_ignore_good.yml  pinned_images_bad.yml  pinned_images_good.yml  pre_merge_non_prod_test_bad.yml  pre_merge_non_prod_test_good.yml  required_agent_labels_good.yml  safe_directory_bad.yml  safe_directory_good.yml  secrets_readable_first_step_bad.yml  secrets_readable_first_step_good.yml  stale_commit_guard_good.yml  two_phase_readiness_bad.yml  two_phase_readiness_good.yml
(+14 files in other folders)
