[project]
name = "agent-power-pack"
version = "0.0.1"
description = "Universal agentic power pack for Claude Code, Codex CLI, Gemini CLI, and Cursor"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_power_pack"]

[tool.uv.workspace]
members = [
    "adapters/claude",
    "adapters/codex",
    "adapters/gemini",
    "adapters/cursor",
    "mcp_container",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agent_power_pack"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "perf: Performance tests",
]
asyncio_mode = "auto"
