[project]
name = "agent-power-pack"
version = "0.1.0"
description = "Universal agentic power pack for Claude Code, Codex CLI, Gemini CLI, and Cursor"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0",
    "gql[httpx]>=3.5",
    "httpx>=0.27",
    "pydantic>=2.0",
    "PyMuPDF>=1.24",
    "python-dotenv>=1.0",
    "reportlab>=4.0",
    "rich>=13.0",
    "ruamel.yaml>=0.18",
    "structlog>=24.0",
    "typer>=0.12",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-recording>=0.13",
    "ruff>=0.4",
    "testcontainers>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_power_pack"]

[tool.uv.workspace]
members = [
    "adapters/claude",
    "adapters/codex",
    "adapters/gemini",
    "adapters/cursor",
    "mcp_container",
]

[project.scripts]
agent-power-pack = "agent_power_pack.cli:main"

[project.entry-points."agent_power_pack.adapters"]
claude-code = "adapters.claude"
codex-cli = "adapters.codex"
gemini-cli = "adapters.gemini"
cursor = "adapters.cursor"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agent_power_pack"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "perf: Performance tests",
]
asyncio_mode = "auto"
