[project]
name = "agent-power-pack-mcp-container"
version = "0.0.1"
description = "Single multi-transport MCP container for agent-power-pack"
requires-python = ">=3.11"
dependencies = [
    "agent-power-pack",
    "mcp>=1.0",
]

[tool.uv.sources]
agent-power-pack = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
