[project]
name = "agent-power-pack-mcp-container"
version = "0.0.1"
description = "Single multi-transport MCP container for agent-power-pack"
requires-python = ">=3.11"
dependencies = [
    "agent-power-pack",
    "mcp>=1.0",
    "httpx>=0.27",
    "gql[httpx]>=3.5",
    "playwright>=1.49",
    "aiohttp>=3.9",
    "starlette>=0.37",
    "uvicorn>=0.29",
    "structlog>=24.0",
    "pydantic>=2.0",
]

[tool.uv.sources]
agent-power-pack = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
