[project]
name = "agent-power-pack-adapter-codex"
version = "0.0.1"
description = "Codex CLI adapter for agent-power-pack"
requires-python = ">=3.11"
dependencies = [
    "agent-power-pack",
]

[tool.uv.sources]
agent-power-pack = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
