[project]
name = "agent-power-pack-adapter-gemini"
version = "0.0.1"
description = "Gemini CLI adapter stub for agent-power-pack"
requires-python = ">=3.11"
dependencies = [
    "agent-power-pack",
]

[tool.uv.sources]
agent-power-pack = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
